--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     align-items: center;
     padding: 20px;
     max-width: 400px;
-    background-color: #fff;
+    background-color: #f3f1f1fd;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     transition: transform 0.3s, opacity 0.3s;
@@ -61,25 +61,34 @@ input[type="text"] {
     margin: 10px 0;
     border: 1px solid #ddd;
     border-radius: 5px;
-    width: auto;
+    width: fit-content;
     font-size: 16px;
 }
 
 #liveScore {
-    font-size: 18px;
     font-weight: bold;
-    color: #4CAF50; 
-    margin-top: 10px;
+    color: #007bff;
 }
 
 #timer {
     font-weight: bold;
-    color: #e63946; 
+    color: #e63946;
 }
-.status {
-    font-size: 14px;
-    color: #555;
+
+.progress-bar {
+    width: 100%;
+    height: 8px;
+    background-color: #e0e0e0;
+    border-radius: 5px;
     margin-top: 20px;
+}
+
+.progress {
+    height: 100%;
+    width: 0;
+    background-color: #007bff;
+    border-radius: 5px;
+    transition: width 0.3s ease-in-out;
 }
 
 .answer-option {
